Add preview for image objects

--- a/browser/app/less/inc/list.less
+++ b/browser/app/less/inc/list.less
@@ -149,6 +149,13 @@ div.fesl-row {
         }
 
     }
+
+    .preview {
+        position: absolute;
+        z-index: 1;
+        left: 5%;
+        top: 90%;
+    }
 }
 
 .fesl-row-selected {
